done login with google and onboarding user

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
